--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -1,189 +1,413 @@
 :host {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  position: relative;
+
+  .content {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding-left: 16px;
+  }
 
-    .content {
+  .controls {
+    margin-bottom: auto;
+    margin-top: 32px;
+    padding-left: 10px;
+    min-width: 50px;
+  }
+
+  .option-card {
+    background-image: linear-gradient(
+      -225deg,
+      #69eacb29 0%,
+      #eaccf83d 48%,
+      #6654f114 100%
+    );
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding-top: 17px;
+  }
+
+  .poster {
+    $height: 130px;
+    height: $height;
+    width: 2/3 * $height;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 19px;
+  }
+
+  .title {
+    line-height: 0.95em;
+  }
+
+  .movie-info {
+    min-height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .subtitle {
+    display: flex;
+    flex-wrap: wrap;
+
+    .basics {
+      padding-right: 10px;
+      line-height: 0.7em;
+      display: flex;
+      align-items: center;
+      width: 100%;
+    }
+  }
+
+  .year,
+  .runtime {
+    font-size: 0.6em;
+  }
+
+  .separator {
+    font-size: 0.6em;
+    padding: 0 4px;
+  }
+
+  .overview {
+    font-size: 0.7em;
+
+    &.shortened {
+      height: 50px;
+      overflow: hidden;
+    }
+
+    &.full {
+      padding-top: 30px;
+    }
+  }
+
+  .movie-ratings {
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+
+    .movie-rating {
+      display: flex;
+      font-size: 0.6em;
+      font-family: "Product Sans Bold";
+      border-radius: 2px;
+      background-color: #6cd577;
+      padding: 1px 4px 1px 8px;
+      margin: 2px;
+
+      &.imdb {
+        background-color: #f5c532;
+        color: black;
+      }
+
+      &.meta-critic {
+        color: white;
+        &.green {
+          background-color: #6acc34;
+        }
+
+        &.yellow {
+          background-color: #facc33;
+        }
+
+        &.red {
+          background-color: #ea3f33;
+        }
+      }
+
+      &.rotten-tomatoes {
+        background-color: #ea3f33;
+        color: white;
+      }
+
+      mat-icon {
+        padding-left: 5px;
+      }
+    }
+  }
+
+  .genres {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5px 0 5px;
+
+    .genre {
+      font-size: 0.6em;
+      padding: 2px 10px;
+      border-radius: 11px;
+      background-image: linear-gradient(225deg, #eecafd 0%, #64d3e3 100%);
+      color: white;
+      margin: 0 3px 5px;
+    }
+  }
+
+  .show-more {
+    text-transform: uppercase;
+    font-size: 0.5em;
+    width: 100%;
+    text-align: center;
+    color: #ccc;
+    padding-bottom: 9px;
+    padding-top: 7px;
+  }
+
+  .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 3px;
+    width: 0%;
+    background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+    background-size: 100vw;
+    opacity: 0.5;
+    transition: all 2s ease !important;
+    z-index: 1;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+  }
+
+  .flex {
+    display: flex;
+  }
+
+  .flex-column {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .reactions {
+    & > * {
+      margin-left: 6px;
+    }
+
+    min-height: 14px;
+    margin-left: -16px;
+    padding: 0 46px 8px 4px;
+    margin-right: -16px;
+    margin-bottom: -10px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+
+    &:empty {
+      background: unset;
+    }
+
+    .reaction {
+      height: 17px;
+      font-size: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2px 7px;
+      border-radius: 9999px;
+      min-width: 27px;
+      margin-top: 2px;
+      // box-shadow: inset 1px 1px 2px 0px #0000001f;
+      color: #58565a;
+      background: #ffffffe8;
+
+      &.unreacted {
+        filter: grayscale(100%) opacity(0.5);
+        // background: unset;
+      }
+
+      .label {
         position: relative;
-        display: flex;
-        flex-direction: column;
-        flex: 1;
-    }
+        bottom: 0;
+      }
 
-    .controls {
-        margin-bottom: auto;
-        margin-top: 32px;
-        padding-left: 10px;
-        min-width: 50px;
-    }
+      &.has-reacted {
+        // background: #e9e9e9;
+        position: relative;
+        z-index: 0;
 
-    .option-card {
-        width: 100%;
-        padding-left: 100px;
-        display: flex;
-        align-items: center;
-    }
-
-    .poster {
-        position: absolute;
-        left: 18px;
-        top: 16px;
-        height: 100px;
-        box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
-    }
-
-    .title {
-        line-height: 0.95em;
-    }
-
-    // .backdrop {
-    //     height: 50px;
-    //     width: 100%;
-
-    //     background-size: auto 100%;
-
-    //     position: relative;
-    //     bottom: -80px;
-
-    //     img {
-    //         display: block;
-    //         position: relaabsolutetive;
-    //         z-index: 1;
-    //         width: 100%;
-    //         clip: rect(65px,1280px,80px,-1px);
-    //     }
-
-    //     .fade {
-    //         position: absolute;
-    //         bottom: 0;
-    //         width: 100%;
-    //         height: 80px;
-    //         z-index: 2;
-    //         background: rgba(255, 255, 255, 0) linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 80%) repeat scroll 0 0;
-    //     }
-    // }
-
-    .movie-info {
-        min-height: 50px;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-    }
-
-    .subtitle {
-        display: flex;
-        flex-wrap: wrap;
-
-        .basics {
-            padding-right: 10px;
-            line-height: 0.7em;
-            display: flex;
-            align-items: center;
+        &:before {
+          content: "";
+          position: absolute;
+          z-index: -1;
+          inset: 0;
+          padding: 2px;
+          border-radius: 99999px;
+          background-image: linear-gradient(
+            -225deg,
+            #ac32e4a8 0%,
+            #7918f2d4 37%,
+            #7092e6e6 100%
+          );
+          -webkit-mask: linear-gradient(#fff 0 0) content-box,
+            linear-gradient(#fff 0 0);
+          mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+          -webkit-mask-composite: xor;
+          mask-composite: exclude;
         }
+      }
+
+      .count {
+        margin-left: 7px;
+      }
+    }
+  }
+
+  .movie-reactions {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: absolute;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    top: 147px;
+    width: 87px;
+    font-size: 17px;
+    padding: 0 0 4px;
+    height: 27px;
+    background: #ffffff99;
+    box-shadow: 1px 1px 11px 0px #00000026;
+
+    .reaction {
+      position: relative;
     }
 
-    .year, .runtime {
-        font-size: 0.6em;
+    .fa-solid {
+      position: relative;
+      z-index: 1;
     }
 
-    .separator {
-        font-size: 0.6em;
-        padding: 0 4px;
+    .count {
+      font-size: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 9999px;
+      width: 15px;
+      position: absolute;
+      top: 13px;
+      right: -6px;
+      // color: white;
+      box-shadow: 1px 1px 1px 0 #717fe8;
+      // background-color: #d1c6e0;
+      color: #58565a;
+    }
+  }
+
+  .top-row-controls {
+    top: 12px;
+  }
+
+  textarea {
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 0px solid #d9c6ee;
+    border-radius: 4px;
+    background-color: #ffffffb0;
+    font-size: 12px;
+    resize: none;
+    width: 100%;
+    margin: 15px 10px 5px;
+  }
+
+  .has-description {
+    color: #d9c6ee;
+  }
+
+  .description {
+    font-style: italic;
+    color: #5d5d5d;
+    margin: 10px 5px;
+    line-height: 23px;
+    word-break: break-word;
+
+    a.outside-link {
+      background: #b9b6ec;
+      color: white;
+      padding: 2px 7px;
+      border-radius: 99999px;
+    }
+  }
+
+  .description-button {
+    width: 100px;
+    text-align: center;
+    padding: 3px 15px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    background: #d9c6ee;
+    border-radius: 26px;
+  }
+
+  .gradient-divider {
+    background-image: linear-gradient(
+      -225deg,
+      #ac32e4 0%,
+      #7918f2 37%,
+      #7092e6 100%
+    );
+    height: 2px;
+    margin-left: -16px;
+    margin-right: -16px;
+  }
+
+  .available-reactions {
+    position: absolute;
+    bottom: 8px;
+    right: 13px;
+    background-color: #ffffffd4;
+    border-radius: 33px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-height: 22px;
+    overflow: hidden;
+    transition: max-height ease 0.5s, background-color ease 0.3s;
+    justify-content: flex-end;
+
+    & .scroll > *:not(:last-child) {
+      margin-bottom: 1px;
+      font-size: 13px;
+      width: 16px;
+      position: relative;
+      left: 4px;
     }
 
-    .overview {
-        font-size: 0.7em;
-
-        &.shortened {
-            height: 33px;
-            overflow: hidden;
-        }
+    .add-btn {
+      color: #ccc;
+      bottom: -5px;
+      position: relative;
     }
 
-    .movie-ratings {
-        margin-bottom: 3px;
-        display: flex;
-        flex-wrap: wrap;
-    
-        .movie-rating {
-            display: flex;
-            font-size: 0.6em;
-            font-family: "Product Sans Bold";
-            border-radius: 2px;
-            background-color: #6cd577;
-            padding: 1px 8px;
-            margin: 2px;
+    &.open {
+      max-height: 120px;
+      background-color: white;
+      padding-top: 5px;
 
-            &.imdb {
-                background-color: #f5c532;
-                color: black;
-            }
+      .scroll {
+        overflow-y: auto;
+      }
 
-            &.meta-critic {
-                color: white;
-                &.green {
-                    background-color: #6acc34;
-                }
-
-                &.yellow {
-                    background-color: #facc33;
-                }
-
-                &.red {
-                    background-color: #ea3f33;
-                }
-            }
-
-            &.rotten-tomatoes {
-                background-color: #ea3f33;
-                color: white;
-            }
-
-            mat-icon {
-                padding-left: 5px;
-            }
-            
-        }
+      .add-btn {
+        color: transparent;
+        transition: ease 0.6s;
+      }
     }
+  }
+}
 
-    .genres {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 5px;
-        padding-bottom: 10px;
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hidden-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
-        .genre {
-            font-size: 0.9em;
-            padding: 3px 11px;
-            border-radius: 11px;
-            background-color: #6cd577;
-            margin-right: 2px;
-            margin-bottom: 10px;
-        }
-    }
-
-    .show-more {
-        text-transform: uppercase;
-        font-size: 0.5em;
-        width: 100%;
-        text-align: center;
-        color: #ccc;
-        padding-bottom: 15px;
-        padding-top: 5px;
-    }
-
-    .bg {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 3px;
-        width: 0%;
-        background-color: #FFA99F;
-        opacity: 0.5;
-        transition: all 2s ease !important;
-        z-index: 1;
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-    }
+/* Hide scrollbar for IE, Edge and Firefox */
+.hidden-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
