--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -12,9 +12,9 @@ $custom-primary-palette: (
     200 : #ffb8cd,
     300 : #ff9cb8,
     400 : #ff86a9,
-    500 : #ff719a,
+    500 : #d9c6ee,
     600 : #ff6992,
-    700 : #ffa99f,
+    700 : #d9c6ee,
     800 : #ff547e,
     900 : #ff426c,
     A100 : #ffffff,
