--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="granimate">
   <!-- This fills the remaining space of the current row -->
-  <button mat-button (click)="addPoll()" title="Create new poll">
+  <button class="add-new-button" mat-button (click)="addPoll()" title="Create new poll">
     <mat-icon>add</mat-icon>
   </button>
   <span class="application-name" (click)="goToRoot()">Poll-A-Lot</span>
