--- a/src/app/voter/voter.component.html
+++ b/src/app/voter/voter.component.html
@@ -1,10 +1,10 @@
-<div class="voter-container">
-  <div class="votes" [ngClass]="{'voted': hasVoted}" [matTooltip]="getVotersText(pollItem)">
+<div class="voter-container" [ngClass]="{'voted': hasVoted}">
+  <div class="votes" [matTooltip]="getVotersText(pollItem)">
     <span>{{ pollItem.voters.length }}</span>
   </div>
   <div class="button-container">
     <button mat-raised-button color="primary" (click)="clicked()" class="favorite">
-      <mat-icon>favorite</mat-icon>
+      <mat-icon class="heart-icon">favorite</mat-icon>
     </button>
   </div>
 </div>
