--- a/src/app/voter/voter.component.scss
+++ b/src/app/voter/voter.component.scss
@@ -2,57 +2,62 @@ $half-height: 30px;
 $width: 40px;
 
 .voter-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-width: $width;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: $width;
 
-    box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
-    border-radius: 5px;
-    overflow: hidden;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  overflow: hidden;
 
-    background-color: #fff;
+  background-color: #fff;
 
-    .voted {
-        background-color: #FFA99F;
-    }
+  .voted {
+    background-color: #d9c6ee;
+    border: 1px solid #7d26dc;
+  }
 
-    .votes {
-        width: 100%;
-        text-align: center;
-        height: $half-height;
+  .votes {
+    width: 100%;
+    text-align: center;
+    height: $half-height;
+    line-height: $half-height;
+    color: black;
+  }
+
+  .button-container {
+    height: $half-height;
+    width: 100%;
+
+    button {
+      min-width: unset;
+      padding: 0;
+      width: 100%;
+
+      .mat-button-wrapper {
         line-height: $half-height;
-        color: black;
+      }
+
+      &.mat-raised-button {
+        line-height: $half-height;
+      }
+
+      .mat-icon {
+        font-size: 18px;
+        height: 18px;
+        width: 18px;
+      }
     }
 
-    .button-container {
-        height: $half-height;
-        width: 100%;
-
-        button {
-            min-width: unset;
-            padding: 0;
-            width: 100%;
-
-            .mat-button-wrapper{
-                line-height: $half-height;
-            }
-
-            &.mat-raised-button {
-                line-height: $half-height;
-            }
-
-            .mat-icon {
-                font-size: 18px;
-                height: 18px;
-                width: 18px;
-            }
-        }
-
-        .favorite {
-            border-top-left-radius: 0;
-            border-top-right-radius: 0;
-        }
+    .favorite {
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
     }
+  }
+}
+
+.heart-icon {
+  color: white;
 }
